--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -817,3 +817,17 @@
     uruchamiania testów. Konfiguracja procesu budowania i zależności jest definiowana w pliku \texttt{pom.xml}.}
 }
 
+
+
+\newglossaryentry{spring-cache}{
+    name={Spring Cache},
+    description={Mechanizm \glslink{cache}{cache'owania} w ekosystemie Spring, który pozwala przechowywać wyniki wywołań metod
+    (przez adnotacje \texttt{@Cacheable}, \texttt{@CachePut}, \texttt{@CacheEvict}) w celu przyspieszenia
+    działania aplikacji i zmniejszenia obciążenia zasobów (bazy danych).}
+}
+
+\newglossaryentry{ttl}{
+    name={TTL},
+    description={(\emph{Time To Live}) Czas życia wpisu w cache lub w innym systemie przechowywania danych —
+    po jego upływie element wygasa i jest usuwany albo uznawany za nieaktualny, co wymusza ponowne pobranie/wyliczenie danych.}
+}
