description under tables

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -13,6 +13,7 @@
 \usepackage[table]{xcolor} % kolory w tabelach
 \usepackage[T1]{fontenc}
 \usepackage{longtable}
+\usepackage{needspace}
 
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
