--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -189,3 +189,15 @@
     urldate = {2025-11-19},
     date = {2024-05-14},
 }
+
+@online{dronemap,
+    title = {DroneMap PANSA},
+    url = {https://dronemap.pansa.pl/},
+    urldate = {2025-11-02},
+}
+
+@online{dronestagram,
+    title = {Dronestagram},
+    url = {https://www.dronestagr.am/},
+    urldate = {2025-11-02},
+}
