--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -104,7 +104,7 @@
 \keyword{spot, dron, droniarz}
 
 
-\addbibresource{bibliography.bib}
+\addbibresource{../bibliography.bib}
 \makeglossaries
 
 % odmiana wpisów ze słowniczka:
