--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -831,3 +831,8 @@
     description={(\emph{Time To Live}) Czas życia wpisu w cache lub w innym systemie przechowywania danych —
     po jego upływie element wygasa i jest usuwany albo uznawany za nieaktualny, co wymusza ponowne pobranie/wyliczenie danych.}
 }
+
+\newglossaryentry{mail-trap}{
+    name={MailTrap},
+    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim.}
+}
