--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -148,6 +148,15 @@
     \hypersetup{linkcolor=black}
     \cleardoublepage
     \phantomsection
+    \addcontentsline{toc}{chapter}{Spis rysunków}
+    \renewcommand{\listfigurename}{Spis rysunków}
+    \listoffigures
+    \endgroup
+
+    \begingroup
+    \hypersetup{linkcolor=black}
+    \cleardoublepage
+    \phantomsection
     \addcontentsline{toc}{chapter}{Spis tabel}
     \renewcommand{\listtablename}{Spis tabel}
     \listoftables
