--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -164,4 +164,10 @@
     urldate = {2025-12-16}
 }
 
-
+@online{oauth-docs-rfc,
+    title = {The OAuth 2.0 Authorization Framework},
+    organization = {Internet Engineering Task Force},
+    url = {https://datatracker.ietf.org/doc/html/rfc6749},
+    urldate = {2025-12-30},
+    date = {2012-10-01}
+}
