Update chat module documentation to reflect GIF integration changes

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1026,3 +1026,26 @@
     description={(\emph{Time To Live}) Czas życia wpisu w cache lub w innym systemie przechowywania danych —
     po jego upływie element wygasa i jest usuwany albo uznawany za nieaktualny, co wymusza ponowne pobranie/wyliczenie danych.}
 }
+\newglossaryentry{tenor}
+{
+    name={Tenor},
+    description={Zewnętrzna usługa udostępniająca \glslink{api}{API} do wyszukiwania i pobierania animowanych \glslink{gif}{GIF}-ów.}
+}
+
+\newglossaryentry{spring-webflux}
+{
+    name={Spring WebFlux},
+    description={Reaktywny moduł frameworka Spring umożliwiający budowę aplikacji oraz klientów HTTP w modelu nieblokującym.}
+}
+
+\newglossaryentry{webclient}
+{
+    name={WebClient},
+    description={Reaktywny klient HTTP w ekosystemie Spring służący do wykonywania zapytań do zewnętrznych usług w sposób nieblokujący.}
+}
+
+\newglossaryentry{mono}
+{
+    name={Mono},
+    description={Typ reaktywny reprezentujący asynchroniczne obliczenie zwracające co najwyżej jeden element.}
+}
