--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1103,7 +1103,7 @@
 
 \newglossaryentry{bcrypt}{
     name={BCrypt},
-    description={Popularny algorytm haszowania haseł.}
+    description={Popularny algorytm haszowania haseł}
 }
 
 \newglossaryentry{http-401}{
@@ -1124,7 +1124,10 @@
 \newglossaryentry{zapytanie-preflight}
 {
     name={zapytanie preflight},
-    description={Wstępne zapytanie HTTP wykonywane automatycznie przez przeglądarkę w ramach mechanizmu \gls{cors}, najczęściej metodą \texttt{OPTIONS}. Służy do sprawdzenia, czy serwer pozwala na wykonanie właściwego żądania z innego pochodzenia (origin), w tym czy akceptuje daną metodę HTTP oraz niestandardowe nagłówki. Po poprawnej odpowiedzi serwera przeglądarka wysyła właściwe żądanie.}
+    description={Wstępne zapytanie HTTP wykonywane automatycznie przez przeglądarkę w ramach mechanizmu \gls{cors}, najczęściej metodą \texttt{OPTIONS}. Służy do sprawdzenia, czy serwer pozwala na wykonanie właściwego żądania z innego pochodzenia (origin), w tym czy akceptuje daną metodę HTTP oraz niestandardowe nagłówki. Po poprawnej odpowiedzi serwera przeglądarka wysyła właściwe żądanie}
 }
 
-
+\newglossaryentry{sentinel}{
+    name={sentinel},
+    description={Pomocniczy element interfejsu umieszczany zwykle na końcu listy, którego pojawienie się w obszarze widocznym stanowi sygnał do wykonania akcji, najczęściej doładowania kolejnej porcji danych w mechanizmie \gls{infinite-scroll}}
+}
