--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -556,10 +556,10 @@
     description={Edytor treści, który zamiast „surowego” tekstu umożliwia stosowanie formatowania (np. pogrubienie, kursywa, listy, nagłówki, linki), dzięki czemu użytkownik może tworzyć czytelne, sformatowane wpisy}
 }
 
-\newglossaryentry{tiptap}
-{
+\newglossaryentry{tiptap}{
     name={Tiptap},
-    description={Nowoczesny, rozszerzalny edytor \textit{rich text} dla aplikacji webowych oparty na silniku ProseMirror. Umożliwia budowanie rozbudowanych, modularnych edytorów treści, np. do postów na forum}
+    description={Nowoczesny, rozszerzalny edytor \textit{rich text} dla aplikacji webowych oparty na silniku ProseMirror.
+    Umożliwia budowanie rozbudowanych, modularnych edytorów treści, np. do postów na forum.}
 }
 
 \newglossaryentry{integration-tests}
@@ -1012,8 +1012,6 @@
     uruchamiania testów. Konfiguracja procesu budowania i zależności jest definiowana w pliku \texttt{pom.xml}.}
 }
 
-
-
 \newglossaryentry{spring-cache}{
     name={Spring Cache},
     description={Mechanizm \glslink{cache}{cache'owania} w ekosystemie Spring, który pozwala przechowywać wyniki wywołań metod
@@ -1025,4 +1023,10 @@
     name={TTL},
     description={(\emph{Time To Live}) Czas życia wpisu w cache lub w innym systemie przechowywania danych —
     po jego upływie element wygasa i jest usuwany albo uznawany za nieaktualny, co wymusza ponowne pobranie/wyliczenie danych.}
+}
+
+\newglossaryentry{react-select}{
+    name={react-select},
+    description={\glslink{biblioteka}{Biblioteka} React służąca do tworzenia zaawansowanych \glslink{react-component}{komponentów}
+    wyboru (\textit{select}), wspierająca wyszukiwanie, wybór pojedynczy i wielokrotny, filtrowanie, grupowanie opcji oraz dostosowywanie wyglądu.}
 }
