Implmentacja czat back + front (#276)
* Update author and date in chat.tex; add main chat view outline

* Add chat module with GIF integration and service layers

* Update project implementation chapter with key elements and architectural insights

* Improve implementation chapter by correcting typos and enhancing clarity in module descriptions

* test

* Refactor chat module and improve GIF integration documentation

* Update chat module documentation to reflect GIF integration changes

* Update chat module documentation to reflect GIF integration changes

* Update GIF integration documentation for chat module

* Update chat module documentation to reflect implementation details and component structure

* Enhance chat module documentation with detailed component implementations and updated figures

* Remove unnecessary blank line in frontend implementation index

* Refactor chat module documentation for clarity and consistency

* Refactor chat module documentation for improved clarity and consistency

* Improve chat module documentation with enhanced terminology and clarity

* Enhance documentation for Tenor GIF integration with improved terminology and clarity

* narzedzie

* odniesienia do slowniczka

* review

* test

* Update ChatList and ChatTopBar documentation with additional figures and improved descriptions

* front formatting

* Improve documentation clarity by adding component links and enhancing descriptions in chat and GIF integration sections

* Enhance documentation by adding glossary links for frontend and backend terms

* Update GIF integration documentation to reflect changes in architecture

---------

Co-authored-by: Adam Langmesser <114993042+s27119@users.noreply.github.com>
Co-authored-by: stanoz <s.oziemczuk@gmail.com>

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1,8 +1,6 @@
 %! Author = Mateusz Redosz
 %! Date = 20/09/2025
 
-% Słownik pojęć
-
 \newglossaryentry{backend}
 {
     name={Backend},
@@ -1029,6 +1027,29 @@
     name={Kafelki mapy},
     description={To małe kwadratowe fragmenty mapy, z których budowany jest jej całościowy obraz}
 }
+\newglossaryentry{tenor}
+{
+    name={Tenor},
+    description={Zewnętrzna usługa udostępniająca \glslink{api}{API} do wyszukiwania i pobierania animowanych \glslink{gif}{GIF}-ów.}
+}
+
+\newglossaryentry{spring-webflux}
+{
+    name={Spring WebFlux},
+    description={Reaktywny moduł frameworka Spring umożliwiający budowę aplikacji oraz klientów HTTP w modelu nieblokującym.}
+}
+
+\newglossaryentry{webclient}
+{
+    name={WebClient},
+    description={Reaktywny klient HTTP w ekosystemie Spring służący do wykonywania zapytań do zewnętrznych usług w sposób nieblokujący.}
+}
+
+\newglossaryentry{mono}
+{
+    name={Mono},
+    description={Typ reaktywny reprezentujący asynchroniczne obliczenie zwracające co najwyżej jeden element.}
+}
 
 \newglossaryentry{uwierzytelnianie}{
     name={uwierzytelnianie},
@@ -1082,7 +1103,7 @@
 
 \newglossaryentry{bcrypt}{
     name={BCrypt},
-    description={Popularny algorytm haszowania haseł.}
+    description={Popularny algorytm haszowania haseł}
 }
 
 \newglossaryentry{http-401}{
@@ -1103,7 +1124,10 @@
 \newglossaryentry{zapytanie-preflight}
 {
     name={zapytanie preflight},
-    description={Wstępne zapytanie HTTP wykonywane automatycznie przez przeglądarkę w ramach mechanizmu \gls{cors}, najczęściej metodą \texttt{OPTIONS}. Służy do sprawdzenia, czy serwer pozwala na wykonanie właściwego żądania z innego pochodzenia (origin), w tym czy akceptuje daną metodę HTTP oraz niestandardowe nagłówki. Po poprawnej odpowiedzi serwera przeglądarka wysyła właściwe żądanie.}
+    description={Wstępne zapytanie HTTP wykonywane automatycznie przez przeglądarkę w ramach mechanizmu \gls{cors}, najczęściej metodą \texttt{OPTIONS}. Służy do sprawdzenia, czy serwer pozwala na wykonanie właściwego żądania z innego pochodzenia (origin), w tym czy akceptuje daną metodę HTTP oraz niestandardowe nagłówki. Po poprawnej odpowiedzi serwera przeglądarka wysyła właściwe żądanie}
 }
 
-
+\newglossaryentry{sentinel}{
+    name={sentinel},
+    description={Pomocniczy element interfejsu umieszczany zwykle na końcu listy, którego pojawienie się w obszarze widocznym stanowi sygnał do wykonania akcji, najczęściej doładowania kolejnej porcji danych w mechanizmie \gls{infinite-scroll}}
+}
