--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1131,3 +1131,8 @@
     name={sentinel},
     description={Pomocniczy element interfejsu umieszczany zwykle na końcu listy, którego pojawienie się w obszarze widocznym stanowi sygnał do wykonania akcji, najczęściej doładowania kolejnej porcji danych w mechanizmie \gls{infinite-scroll}}
 }
+
+\newglossaryentry{mail-trap}{
+    name={MailTrap},
+    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim.}
+}
