--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1030,3 +1030,16 @@
     description={\glslink{biblioteka}{Biblioteka} React służąca do tworzenia zaawansowanych \glslink{react-component}{komponentów}
     wyboru (\textit{select}), wspierająca wyszukiwanie, wybór pojedynczy i wielokrotny, filtrowanie, grupowanie opcji oraz dostosowywanie wyglądu.}
 }
+
+\newglossaryentry{react-portal}{
+    name={react-portal},
+    description={Mechanizm \glslink{biblioteka}{biblioteki} React umożliwiający renderowanie komponentów
+    poza hierarchią \glslink{dom}{DOM} \glslink{react-component}{komponentu} nadrzędnego.}
+}
+
+\newglossaryentry{rekurencja}{
+    name={Rekurencja},
+    description={Technika programistyczna polegająca na odwołaniu się funkcji
+    do samej siebie w celu rozwiązania problemu poprzez podział na mniejsze
+    podproblemy.}
+}
