--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1134,5 +1134,15 @@
 
 \newglossaryentry{mail-trap}{
     name={MailTrap},
-    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim.}
+    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim}
+}
+
+\newglossaryentry{crud}{
+    name={CRUD},
+    description={Akronim od Create, Read, Update, Delete, określający podstawowe operacje wykonywane na danych w systemach informatycznych}
+}
+
+\newglossaryentry{asynchroniczność}{
+    name={Asynchroniczność},
+    description={Sposób wykonywania operacji, w którym ich realizacja nie blokuje dalszego działania aplikacji, a wynik przetwarzania jest obsługiwany w późniejszym czasie}
 }
