--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1134,24 +1134,30 @@
 
 \newglossaryentry{mail-trap}{
     name={MailTrap},
-    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim.}
+    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim}
 }
 
 \newglossaryentry{react-select}{
     name={react-select},
     description={\glslink{biblioteka}{Biblioteka} React służąca do tworzenia zaawansowanych \glslink{react-component}{komponentów}
-    wyboru (\textit{select}), wspierająca wyszukiwanie, wybór pojedynczy i wielokrotny, filtrowanie, grupowanie opcji oraz dostosowywanie wyglądu.}
+    wyboru (\textit{select}), wspierająca wyszukiwanie, wybór pojedynczy i wielokrotny, filtrowanie, grupowanie opcji oraz dostosowywanie wyglądu}
 }
 
 \newglossaryentry{react-portal}{
     name={react-portal},
     description={Mechanizm \glslink{biblioteka}{biblioteki} React umożliwiający renderowanie komponentów
-    poza hierarchią \glslink{dom}{DOM} \glslink{react-component}{komponentu} nadrzędnego.}
+    poza hierarchią \glslink{dom}{DOM} \glslink{react-component}{komponentu} nadrzędnego}
 }
 
 \newglossaryentry{rekurencja}{
     name={Rekurencja},
     description={Technika programistyczna polegająca na odwołaniu się funkcji
     do samej siebie w celu rozwiązania problemu poprzez podział na mniejsze
-    podproblemy.}
+    podproblemy}
+}
+
+\newglossaryentry{ux}{
+    name={UX},
+    description={Doświadczenie użytkownika (ang. User Experience), całokształt wrażeń użytkownika
+    wynikających z interakcji z aplikacją}
 }
