--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -136,6 +136,18 @@
     date = {2024-05-14},
 }
 
+@online{dronemap,
+    title = {DroneMap PANSA},
+    url = {https://dronemap.pansa.pl/},
+    urldate = {2025-11-02},
+}
+
+@online{dronestagram,
+    title = {Dronestagram},
+    url = {https://www.dronestagr.am/},
+    urldate = {2025-11-02},
+}
+
 @online{rfc6455,
     title = {RFC 6455: The WebSocket Protocol},
     organization = {IETF},
