--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -115,7 +115,7 @@
 \makeglossaries
 
 % odmiana wpisów ze słowniczka:
-\newcommand{\glsdroniarzFotoVideoInstr}{%
+\newcommand{\glsdroniarzFotoVideoInstr}{
     \glslink{droniarz-foto-video}{\glsentryuseri{droniarz-foto-video}}%
 }
 
