--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -115,8 +115,8 @@
 \makeglossaries
 
 % odmiana wpisów ze słowniczka:
-\newcommand{\glsdroniarzFotoVideoInstr}{%
-    \glslink{droniarz-foto-video}{\glsentryuseri{droniarz-foto-video}}%
+\newcommand{\glsdroniarzFotoVideoInstr}{
+    \glslink{droniarz-foto-video}{\glsentryuseri{droniarz-foto-video}}
 }
 
 
