--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1147,6 +1147,12 @@
     name={react-portal},
     description={Mechanizm \glslink{biblioteka}{biblioteki} React umożliwiający renderowanie komponentów
     poza hierarchią \glslink{dom}{DOM} \glslink{react-component}{komponentu} nadrzędnego}
+    description={Usługa do testowania i przechwytywania wiadomości e-mail wysyłanych z aplikacji w środowisku deweloperskim}
+}
+
+\newglossaryentry{crud}{
+    name={CRUD},
+    description={Akronim od Create, Read, Update, Delete, określający podstawowe operacje wykonywane na danych w systemach informatycznych}
 }
 
 \newglossaryentry{rekurencja}{
@@ -1160,4 +1166,8 @@
     name={UX},
     description={Doświadczenie użytkownika (ang. User Experience), całokształt wrażeń użytkownika
     wynikających z interakcji z aplikacją}
+}
+\newglossaryentry{asynchroniczność}{
+    name={Asynchroniczność},
+    description={Sposób wykonywania operacji, w którym ich realizacja nie blokuje dalszego działania aplikacji, a wynik przetwarzania jest obsługiwany w późniejszym czasie}
 }
