Fix punctuation in glossary entries for consistency

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -316,7 +316,7 @@
 
 \newglossaryentry{hook}{
     name={hook},
-    description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Wszystkie hooki zaczynają się od \texttt{use..} (np. \texttt{useState}, \texttt{useEffect})}
+    description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Wszystkie hooki zaczynają się od \texttt{use...} (np. \texttt{useState}, \texttt{useEffect})}
 }
 
 \newglossaryentry{css}{
@@ -557,7 +557,7 @@
 \newglossaryentry{tiptap}{
     name={Tiptap},
     description={Nowoczesny, rozszerzalny edytor \textit{rich text} dla aplikacji webowych oparty na silniku ProseMirror.
-    Umożliwia budowanie rozbudowanych, modularnych edytorów treści, np. do postów na forum.}
+    Umożliwia budowanie rozbudowanych, modularnych edytorów treści, np. do postów na forum}
 }
 
 \newglossaryentry{integration-tests}
@@ -733,7 +733,7 @@
 
 \newglossaryentry{destynacja}{
     name={destynacja},
-    description={Adres logiczny (ścieżka) w komunikacji \gls{stomp}, na który wysyła się wiadomości lub który się \glslink{subskrypcja}{subskrybuje} (np. \texttt{/app/..} albo \texttt{/subscribe/..})}
+    description={Adres logiczny (ścieżka) w komunikacji \gls{stomp}, na który wysyła się wiadomości lub który się \glslink{subskrypcja}{subskrybuje} (np. \texttt{/app/...} albo \texttt{/subscribe/...})}
 }
 
 \newglossaryentry{subskrypcja}{
@@ -1030,25 +1030,25 @@
 \newglossaryentry{tenor}
 {
     name={Tenor},
-    description={Zewnętrzna usługa udostępniająca \glslink{api}{API} do wyszukiwania i pobierania animowanych \glslink{gif}{GIF}-ów.}
+    description={Zewnętrzna usługa udostępniająca \glslink{api}{API} do wyszukiwania i pobierania animowanych \glslink{gif}{GIF}-ów}
 }
 
 \newglossaryentry{spring-webflux}
 {
     name={Spring WebFlux},
-    description={Reaktywny moduł frameworka Spring umożliwiający budowę aplikacji oraz klientów HTTP w modelu nieblokującym.}
+    description={Reaktywny moduł frameworka Spring umożliwiający budowę aplikacji oraz klientów HTTP w modelu nieblokującym}
 }
 
 \newglossaryentry{webclient}
 {
     name={WebClient},
-    description={Reaktywny klient HTTP w ekosystemie Spring służący do wykonywania zapytań do zewnętrznych usług w sposób nieblokujący.}
+    description={Reaktywny klient HTTP w ekosystemie Spring służący do wykonywania zapytań do zewnętrznych usług w sposób nieblokujący}
 }
 
 \newglossaryentry{mono}
 {
     name={Mono},
-    description={Typ reaktywny reprezentujący asynchroniczne obliczenie zwracające co najwyżej jeden element.}
+    description={Typ reaktywny reprezentujący asynchroniczne obliczenie zwracające co najwyżej jeden element}
 }
 
 \newglossaryentry{uwierzytelnianie}{
