Refactor LaTeX documents to improve formatting and readability by adding line breaks in code snippets and descriptions.

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -539,7 +539,7 @@
 \newglossaryentry{slug}
 {
     name={Slug},
-    description={Przyjazny dla użytkownika fragment adresu URL, zwykle oparty na tytule (np. \texttt{/post/jak-zaczac-latac-dronem}), ułatwiający identyfikację treści i pozycjonowanie w wyszukiwarkach}
+    description={Przyjazny dla użytkownika fragment adresu URL, zwykle oparty na tytule \newline (np. \texttt{/post/jak-zaczac-latac-dronem}), ułatwiający identyfikację treści i pozycjonowanie w wyszukiwarkach}
 }
 
 \newglossaryentry{tinymce}
