Remove unused API endpoint definitions and comments from documentation

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -151,23 +151,23 @@
     \vspace*{-2\baselineskip}
     \printglossary[type=\acronymtype, title={}, toctitle={}]
 
-    \begingroup
-    \hypersetup{linkcolor=black}
-    \cleardoublepage
-    \phantomsection
-    \addcontentsline{toc}{chapter}{Spis rysunków}
-    \renewcommand{\listfigurename}{Spis rysunków}
-    \listoffigures
-    \endgroup
-
-    \begingroup
-    \hypersetup{linkcolor=black}
-    \cleardoublepage
-    \phantomsection
-    \addcontentsline{toc}{chapter}{Spis tabel}
-    \renewcommand{\listtablename}{Spis tabel}
-    \listoftables
-    \endgroup
+%    \begingroup
+%    \hypersetup{linkcolor=black}
+%    \cleardoublepage
+%    \phantomsection
+%    \addcontentsline{toc}{chapter}{Spis rysunków}
+%    \renewcommand{\listfigurename}{Spis rysunków}
+%    \listoffigures
+%    \endgroup
+%
+%    \begingroup
+%    \hypersetup{linkcolor=black}
+%    \cleardoublepage
+%    \phantomsection
+%    \addcontentsline{toc}{chapter}{Spis tabel}
+%    \renewcommand{\listtablename}{Spis tabel}
+%    \listoftables
+%    \endgroup
 
     \printbibliography[title={}, heading=bibintoc]
 
