--- a/book/sprz.cls
+++ b/book/sprz.cls
@@ -8,6 +8,10 @@
 \ProvidesClass{sprz}[2023/10/27 SPRZ]
 \LoadClass[12pt,a4paper]{report}
 
+\newcommand{\sprzbodyfontsize}{%
+    \fontsize{11.5pt}{13.8pt}\selectfont
+}
+
 \def\@makechapterhead#1{
     \vspace*{1pt}
     {\parindent \z@ \raggedright \normalfont
@@ -33,10 +37,10 @@
 \renewcommand{\baselinestretch}{1.1}
 \RequirePackage[
     a4paper,
-    top=1.2in,
-    bottom=1.2in,
-    inner=3.17cm,
-    outer=2.54cm
+    top=2.5cm,
+    bottom=2.5cm,
+    inner=3.5cm,
+    outer=2.5cm
 ]{geometry}
 
 \RequirePackage{listings} %Aby dało się umieszczać kody źródłowe programów
@@ -363,6 +367,8 @@
     \end{center}
 
     \endgroup
+
+    \sprzbodyfontsize
     \newpage
 }
 
