--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -398,13 +398,15 @@
 \newglossaryentry{uml}{
     name={UML},
     description={(ang. \textit{Unified Modeling Language});
-    graficzny język wizualizacji, specyfikowania oraz dokumentowania składników systemów informatycznych}
+    graficzny język wizualizacji, specyfikowania oraz dokumentowania składników systemów informatycznych.
+    Źródło: ~\cite{uml-def}}
 }
 
 \newglossaryentry{bpmn}{
     name={BPMN},
     description={(ang. \textit{Business Process Model and Notation});
-    standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych}
+    standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.
+    Źródło: ~\cite{bpmn-def}}
 }
 
 \newglossaryentry{infinite-scroll}{
