Add new bibliography entry and enhance glossary descriptions for clarity

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -197,4 +197,13 @@
     date = {2012-10-01}
 }
 
-%TODO: do porpawy tyutaj organizacje?
+@book{schwarzmuller-react-key-concepts-pl,
+    author = {Maximilian Schwarzmuller},
+    title = {React kluczowe koncepcje. Przewodnik po najważniejszych mechanizmach biblioteki React},
+    publisher = {Helion},
+    year = {2023},
+    location = {Gliwice},
+    isbn = {978-83-8322-885-3},
+    translator = {Tomasz Walczak},
+    note = {Tytuł oryginału: \emph{React Key Concepts: Consolidate your knowledge of React’s core features}. Packt Publishing, 2022}
+}
