Add new bibliography entry and enhance integration section for clarity

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -207,3 +207,14 @@
     translator = {Tomasz Walczak},
     note = {Tytuł oryginału: \emph{React Key Concepts: Consolidate your knowledge of React’s core features}. Packt Publishing, 2022}
 }
+
+@book{flanagan-js-definitive-guide-pl,
+    author = {David Flanagan},
+    title = {JavaScript. Przewodnik. Poznaj język mistrzów programowania},
+    publisher = {Helion},
+    year = {2021},
+    location = {Gliwice},
+    isbn = {978-83-283-7309-9},
+    translator = {Andrzej Watrak},
+    note = {Tytuł oryginału: \emph{JavaScript: The Definitive Guide: Master the World's Most-Used Programming Language}, 7th Edition. O’Reilly Media, 2020 (ISBN 9781491952023)}
+}
