Update bibliography and glossary entries for improved accuracy and clarity

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -405,8 +405,8 @@
 \newglossaryentry{bpmn}{
     name={BPMN},
     description={(ang. \textit{Business Process Model and Notation});
-    standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.
-    Źródło: ~\cite{bpmn-def}}
+    standard opracowany przez organizację Object Management Group (OMG),
+    którego celem jest dostarczenie czytelnej notacji do opisywania procesów biznesowych~\cite[rozdz.~1, s.~9]{drejewicz-bpmn}.}
 }
 
 \newglossaryentry{infinite-scroll}{
