--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -111,30 +111,7 @@
     urldate = {2025-11-02},
 }
 
-@book{uml-def,
-    author = {Stanisław Wrycza and Bartosz Marcinkowski and Krzysztof Wyrzykowski},
-    title = {Język UML 2.0 w modelowaniu systemów informatycznych},
-    publisher = {Helion},
-    isbn = {83-736-1892-9, 8373618929},
-    year = {2006},
-    location = {Warszawa}
-}
 
-@book{wzorce-projektowe,
-    author = {Aleksander Shvets},
-    title = {Wzorce Projektowe Nowoczesny Podręcznik},
-    publisher = {Refactoring Guru},
-    year ={2022},
-    location = {Pamplona}
-}
-
-@online{bpmn-def,
-    title = {10 wskazówek poprawiających modelowanie procesów biznesowych w notacji BPMN},
-    author = {Michał Wolski},
-    url = {https://wolski.pro/2024/05/10-wskazowek-poprawiajacych-modelowanie-procesow-biznesowych-w-notacji-bpmn/},
-    urldate = {2025-11-19},
-    date = {2024-05-14},
-}
 
 @online{dronemap,
     title = {DroneMap PANSA},
@@ -217,4 +194,32 @@
     isbn = {978-83-283-7309-9},
     translator = {Andrzej Watrak},
     note = {Tytuł oryginału: \emph{JavaScript: The Definitive Guide: Master the World's Most-Used Programming Language}, 7th Edition. O’Reilly Media, 2020 (ISBN 9781491952023)}
+}
+
+@book{drejewicz-bpmn,
+    author = {Szymon Drejewicz},
+    title = {Zrozumieć BPMN. Modelowanie procesów biznesowych},
+    publisher = {onepress},
+    year = {2023},
+    edition = {2},
+    location = {Gliwice},
+    isbn = {978-83-8322-293-6},
+    note = {Wydanie 2 rozszerzone; imprint Helion S.A.}
+}
+
+@book{uml-def,
+    author = {Stanisław Wrycza and Bartosz Marcinkowski and Krzysztof Wyrzykowski},
+    title = {Język UML 2.0 w modelowaniu systemów informatycznych},
+    publisher = {Helion},
+    isbn = {83-736-1892-9, 8373618929},
+    year = {2006},
+    location = {Warszawa}
+}
+
+@book{wzorce-projektowe,
+    author = {Aleksander Shvets},
+    title = {Wzorce Projektowe Nowoczesny Podręcznik},
+    publisher = {Refactoring Guru},
+    year ={2022},
+    location = {Pamplona}
 }
