Update section titles and improve terminology in user account panel documentation

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -113,7 +113,7 @@
     Projekt zrealizowano w podejściu \textbf{Disciplined Agile Delivery}~\cite{DAD} w wariancie \textbf{Lean Life Cycle}~\cite{DAD-LLF}.
 }
 
-\keyword{spot, dron, droniarz}
+\keyword{dron, droniarz, spot}
 
 
 \addbibresource{bibliography.bib}
