Enhance glossary and integration section for clarity and consistency

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -406,7 +406,7 @@
     name={BPMN},
     description={(ang. \textit{Business Process Model and Notation});
     standard opracowany przez organizację Object Management Group (OMG),
-    którego celem jest dostarczenie czytelnej notacji do opisywania procesów biznesowych~\cite[rozdz.~1, s.~9]{drejewicz-bpmn}.}
+    którego celem jest dostarczenie czytelnej notacji do opisywania procesów biznesowych~\cite[rozdz.~1, s.~9]{drejewicz-bpmn}}
 }
 
 \newglossaryentry{infinite-scroll}{
