Refactor glossary entries for improved clarity and formatting

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -399,7 +399,7 @@
     name={UML},
     description={(ang. \textit{Unified Modeling Language});
     graficzny język wizualizacji, specyfikowania oraz dokumentowania składników systemów informatycznych
-    \cite[wstęp, s.~nienumerowana]{uml-def}.}
+    \cite[wstęp, s.~nienumerowana]{uml-def}}
 }
 
 \newglossaryentry{bpmn}{
@@ -896,7 +896,7 @@
         \item \textbf{I} \textendash \space Interface Segregation Principle (tłum. \textit{Zasada Segregacji Interfejsów})
         \item \textbf{D} \textendash \space Dependency Inversion Principle (tłum. \textit{Zasada Odwrócenia Zależności})
     \end{itemize}
-    Definicję opracowano na podstawie treści zawartych w~\cite[rozdz. \textit{Zasady SOLID}]{wzorce-projektowe}.
+    Definicję opracowano na podstawie treści zawartych w~\cite[rozdz. \textit{Zasady SOLID}]{wzorce-projektowe}
     }
 }
 
